[package]
name = "agent-backend"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8", features = ["ws"] }
tokio = { version = "1.48", features = ["full"] }
tower-http = { version = "0.6", features = ["cors", "trace"] }
reqwest = { version = "0.12", features = ["stream"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["local-time", "fmt"] }
time = { version = "0.3", features = ["macros", "formatting"] }
dotenvy = "0.15"
tokio-tungstenite = { version = "0.24", features = ["native-tls"] }
futures = "0.3"
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
url = "2.5"
uuid = { version = "1.18", features = ["v7", "serde"] }
serde_json = "1.0"
